[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/tests/card_sandbox.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/CardHand.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/DropZone.tscn" id="3"]

[node name="CardSandbox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Info" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 16.0
offset_right = -20.0
offset_bottom = 44.0

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 12.0
offset_right = -20.0
offset_bottom = 40.0
text = "Back"

[node name="PlayArea" parent="." instance=ExtResource("3")]

[node name="CardHand" parent="." instance=ExtResource("2")]

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
